--- a/style.css
+++ b/style.css
@@ -7,7 +7,15 @@ body {
     background-color: gray;
 }
 
-.Image {
+.Image img {
     display: block;
     margin: 0 auto;
+}
+
+.Desc {
+    
+}
+
+.Desc h1 {
+    text-align: center;
 }
